[package]
name = "ps2keyboard_esp32"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = { package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = ["esp32", "panic-handler", "print-uart"] }
xtensa-lx-rt = { version = "0.11.0", features = ["esp32"], optional = true }
xtensa-lx = { version = "0.7.0", features = ["esp32"] }
esp-println = { git = "https://github.com/esp-rs/esp-println", features = [ "esp32" ]}
pc-keyboard = "0.5.1"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
